--- a/test/fixtures/loans.yml
+++ b/test/fixtures/loans.yml
@@ -3,15 +3,15 @@
 one:
   sum: 1.5
   percentage: 1
-  type: 
-  number_of_month: 1
+  payback_type: 1
+  number_of_months: 1
   static_return_value: 1.5
-  payed_sum: 1.5
+  pay_sum: 1.5
 
 two:
   sum: 1.5
   percentage: 1
-  type: 
-  number_of_month: 1
+  payback_type: 1
+  number_of_months: 1
   static_return_value: 1.5
-  payed_sum: 1.5
+  pay_sum: 1.5
